# pymess

./: Dockerfile  README.md  pyproject.toml  requirements.txt  supabase_mvp.sql
.github/workflows/: auto-accept-pr.yml  ci.yml
backend/: config.py  database.py  main.py  models.py  schemas.py  storage.py
backend/api/: routes.py
backend/crypto/: tls_pinning.py
backend/services/: auth.py  messaging.py  security.py
backend/tests/: test_crypto.py  test_integration.py
backend_supabase/: README.md
backend_supabase/functions/: realtime-notify.sql
backend_supabase/migrations/: 001_init.sql  002_retention.sql
client_android/: main.py
client_windows/: main.py
docs/: DEPLOYMENT.md  SECURITY_CHECKLIST.md
integrations/: .env.example  README.md
mvp/: README.md  __init__.py  client.py  crypto.py
shared/crypto_utils/: aead.py  keys.py  ratchet.py
shared/protocol/: client_session.py  models.py
